@@ -157,9 +157,9 @@ gnc_adjust_update_cb(GtkWidget *widget, GdkEventFocus *event, gpointer data)
 {
   GtkEntry *entry = GTK_ENTRY(widget);
   Account *account = data;
-  gchar *new_string;
+  const char *new_string;
   const char *currency;
-  gchar *string;
+  const char *string;
   double value;
 
   string = gtk_entry_get_text(entry);
@@ -251,8 +251,9 @@ adjBWindow(Account *account)
     GtkWidget *hbox, *vbox;
     GtkWidget *amount, *date;
     GtkWidget *label, *entry;
+    const char *amount_str;
     const char *currency;
-    gchar *string;
+    char *string;
 
     tooltips = gtk_tooltips_new();
 
@@ -296,8 +297,8 @@ adjBWindow(Account *account)
     gtk_tooltips_set_tip(tooltips, amount, TOOLTIP_ADJUST_AMOUNT, NULL);
 
     currency = xaccAccountGetCurrency(account);
-    string = xaccPrintAmount(0.0, PRTSEP, currency);
-    gtk_entry_set_text(GTK_ENTRY(amount), string);
+    amount_str = xaccPrintAmount(0.0, PRTSEP, currency);
+    gtk_entry_set_text(GTK_ENTRY(amount), amount_str);
     gtk_entry_select_region(GTK_ENTRY(amount), 0, -1);
 
     gtk_signal_connect(GTK_OBJECT(amount), "focus-out-event",
